[gd_scene load_steps=7 format=3 uid="uid://cahk400q7nq8o"]

[ext_resource type="Script" path="res://Scripts/GalagaShip.gd" id="1_o22pg"]
[ext_resource type="PackedScene" uid="uid://blb22nkogr816" path="res://Models/GalagaShip.glb" id="2_2cuq2"]
[ext_resource type="PackedScene" uid="uid://44cpf83fokbj" path="res://Scenes/galaga_missile.tscn" id="2_f1imc"]
[ext_resource type="AudioStream" uid="uid://cn8nncbiy2oag" path="res://ShootSound.mp3" id="4_sl4pg"]
[ext_resource type="AudioStream" uid="uid://byrweod0qaxux" path="res://tng_warp5_clean.mp3" id="5_ise1f"]

[sub_resource type="BoxShape3D" id="BoxShape3D_iwbpa"]
size = Vector3(30.391, 10.8022, 15.0992)

[node name="GalagaShip" type="CharacterBody3D"]
script = ExtResource("1_o22pg")
missile = ExtResource("2_f1imc")

[node name="GalagaShip" parent="." instance=ExtResource("2_2cuq2")]

[node name="GunOrganizer" type="Node3D" parent="GalagaShip"]

[node name="ShootRightFront" type="Node3D" parent="GalagaShip/GunOrganizer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.24437, 0, -16.4967)

[node name="ShootLeftFront" type="Node3D" parent="GalagaShip/GunOrganizer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.244, 0, -16.4968)

[node name="ShootRightBack" type="Node3D" parent="GalagaShip/GunOrganizer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.151, 0, -10.5468)

[node name="ShootLeftBack" type="Node3D" parent="GalagaShip/GunOrganizer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.1511, 0, -10.5465)

[node name="ShootMiddle" type="Node3D" parent="GalagaShip/GunOrganizer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -13.3482)

[node name="EngineOrganizer" type="Node3D" parent="GalagaShip"]

[node name="RightEngine" type="Node3D" parent="GalagaShip/EngineOrganizer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.00659, 0, 9.28781)

[node name="LeftEngine" type="Node3D" parent="GalagaShip/EngineOrganizer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 9.288)

[node name="ShipCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.72523, 4.10018)
shape = SubResource("BoxShape3D_iwbpa")
disabled = true

[node name="Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_sl4pg")
volume_db = -8.455

[node name="MakeItSo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ise1f")
